--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,15 @@
 SMARTSHEET_ACCESS_TOKEN=cjwFTOnosztE445MUWkPPDhii6JaLHpSWdZRZ
-SMARTSHEET_SHEET_ID=675451895762820
-SMARTSHEET_INTERVIEW_SHEET_ID=5846895369867140
+# SMARTSHEET_INTERVIEWSHEET_ID="5846895369867140"
 PORT=9090
-REACT_APP_API_BASE_URL=http://localhost:9090/api
+SMARTSHEET_INTERVIEW_SHEET_ID=5846895369867140
+# REACT_APP_API_BASE_URL=http://localhost:9090/api
 SMARTSHEET_BEHAVIORAL_SHEET_ID=675451895762820
+REACTAPP_APIBASEURL=http://localhost:9090/api
+# SMARTSHEET_ACCESSTOKEN=cjwFTOnosztE445MUWkPPDhii6JaLHpSWdZRZ
+# SMARTSHEET_INTERVIEWSHEETID=your_sheet_id_as_number
+# PORT=9090
+# SMTP_HOST=your.smtp.server (if using SMTP)
+# SMTP_PORT=587
+# SMTP_USER=your_smtp_username
+# SMTP_PASS=your_smtp_password
+# REACT_APP_API_BASEURL=http://localhost:9090/api
