--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ PORT=10000
 SMARTSHEET_INTERVIEW_SHEET_ID=5846895369867140
 # REACT_APP_API_BASE_URL=http://localhost:9090/api
 SMARTSHEET_BEHAVIORAL_SHEET_ID=675451895762820
-REACTAPP_APIBASEURL=http://localhost:9090/api
+REACTAPP_APIBASEURL=https://your-render-url/api
 # SMARTSHEET_ACCESSTOKEN=cjwFTOnosztE445MUWkPPDhii6JaLHpSWdZRZ
 # SMARTSHEET_INTERVIEWSHEETID=your_sheet_id_as_number
 # PORT=9090
