--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,9 @@
   "name": "suprajit-backend",
   "version": "1.0.0",
   "main": "app.js",
+
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon"
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -15,7 +16,7 @@
     "multer": "^2.0.2",
     "mustache": "^4.2.0",
     "nodemailer": "^7.0.6",
-    "nodeman": "^1.1.2",
+    "nodemon": "^3.1.10",
     "pdfkit": "^0.17.2",
     "puppeteer": "^24.20.0",
     "smartsheet": "^4.5.0"
