--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ PORT=9090
 SMARTSHEET_INTERVIEW_SHEET_ID=5846895369867140
 # REACT_APP_API_BASE_URL=http://localhost:9090/api
 SMARTSHEET_BEHAVIORAL_SHEET_ID=675451895762820
-REACTAPP_APIBASEURL=http://localhost:9090/api
+REACTAPP_APIBASEURL=https://suprajit-portal.onrender.com/api
