--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
 
   "scripts": {
-    "start": "nodemon"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.12.2",
