--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,5 @@ SMARTSHEET_ACCESS_TOKEN=cjwFTOnosztE445MUWkPPDhii6JaLHpSWdZRZ
 SMARTSHEET_SHEET_ID=675451895762820
 SMARTSHEET_INTERVIEW_SHEET_ID=5846895369867140
 PORT=9090
-REACT_APP_API_BASE_URL=http://localhost:9090/api
+REACT_APP_API_BASE_URL=https://suprajit-portal.onrender.com/api
 SMARTSHEET_BEHAVIORAL_SHEET_ID=675451895762820
